--- a/views/home.html
+++ b/views/home.html
@@ -22,7 +22,7 @@
    </header>
 
    <main>
-      <p class="compracredito">Comprá en cuotas y sin tarjeta de crédito</p>
+      <p>Comprá en cuotas y sin tarjeta de crédito</p>
       <ul>
          <li>Ofertas</li>
          <li>Tiendas Oficiales</li>
@@ -39,7 +39,7 @@
 
    <section>
 
-      <h3 class="titulares">Basado en tu última visita</h3><br>
+      <h3 class="titulares">Basado en tu última visita</h3>
 
       <div id="ultimavisita">
          <div class="articulo">
