--- a/views/testHtml.html
+++ b/views/testHtml.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
    <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Mercado Liebre</title>
    <link href="../css/estilos.css" rel="stylesheet">
@@ -17,14 +16,134 @@
 </head>
 
 <body>
-
+   <header>
+      <img src="../images/logo-mercado-liebre.svg" alt="Logo">
+      <nav> 
+         <p class="busqueda">Buscar productos, marcas</p>
+         <i class="fas fa-search"></i>
+      </nav>
+      <i class="fas fa-hand-holding-usd"></i>
+      <span>Comprá en cuotas y sin tarjeta de crédito</span>
+      <ul class="links">
+         <li>Ofertas</li>
+         <li>Tiendas Oficiales</li>
+         <li>Vender</li>
+         <li>Ayuda</li>
+      </ul>
+         <ul class="links-registro">
+         <li>Creá tu cuenta <i class="far fa-user"></i></li>
+         <li>Ingresá <i class="fas fa-sign-in-alt"></i></li>
+         <li>Mis compras <i class="fas fa-shopping-basket"></i></li>
+      </ul>
+      <div class="burger-menu">
+         <i class="fas fa-bars"></i>
+      </div>
+   </header>
+   <main>
+      <article>
+         <h3 class="titulares">Basado en tu última visita</h3>
+         <div id="ultimavisita">
+            <div class="articulo">
+               <img src="../images/img-cafetera-moulinex.jpg" width="360" alt="cafetera moulinex">
+               <div class="truck">
+                  <i class="fas fa-truck"></i>
+               </div>
+               <div class="valores">
+                  <p class="precios">$6.770</p>
+                  <p class="descuentos">40% off</p>
+               </div>
+               <p class="descripciones">Cafetera Moulinex</p>
+            </div>   
+            <div class="articulo">
+               <img src="../images/img-macbook-pro-2019.jpg" width="360" alt="macbook pro 2019">
+               <div class="truck">
+                  <i class="fas fa-truck"></i>
+               </div>
+               <p class="precios">$230.000</p>
+               <p class="descuentos">20% off</p>
+               <p class="descripciones">MacBook Pro 2019</p>
+            </div>   
+            <div class="articulo">
+               <img src="../images/img-samsung-galaxy-s10.jpg" width="360" alt="samsung galaxy s10">
+               <div class="truck">
+                  <i class="fas fa-truck"></i>
+               </div>
+               <div class="valores">
+                  <p class="precios">$70.500</p>
+                  <p class="descuentos">10% off</p>
+               </div>
+               <p class="descripciones">Samsung Galaxy S10</p>
+            </div>
+            <div class="articulo">
+               <img src="../images/img-tv-samsung-smart.jpg" width="360" alt="tv samsung">
+               <div class="truck">
+                  <i class="fas fa-truck"></i>
+               </div>
+               <div class="valores">
+                  <p class="precios">$23.200</p>
+                  <p class="descuentos">5% off</p>
+               </div>
+               <p class="descripciones">SmartTv Samsung 43"</p>
+            </div>            
+         </div>
+      </article>
+      <article>
+         <h3 class="titulares">Ofertas</h3>
+         <br>
+         <div id="ofertas">
+            <div class="articulo">
+               <img src="../images/img-cafetera-moulinex.jpg" width="360" alt="cafetera moulinex">
+               <div class="truck">
+                  <i class="fas fa-truck"></i>
+               </div>
+               <div class="valores">
+                  <p class="precios">$6.770</p>
+                  <p class="descuentos">40% off</p>
+               </div>
+               <p class="descripciones">Cafetera Moulinex</p>
+            </div>
+            <div class="articulo">
+               <img src="../images/img-macbook-pro-2019.jpg" width="360" alt="macbook pro 2019">
+               <div class="truck">
+                  <i class="fas fa-truck"></i>
+               </div>
+               <div class="valores">
+                  <p class="precios">$230.000</p>
+                  <p class="descuentos">20% off</p>
+               </div>
+               <p class="descripciones">MacBook Pro 2019</p>
+            </div>
+            <div class="articulo">
+               <img src="../images/img-samsung-galaxy-s10.jpg" width="360" alt="samsung galaxy s10">
+               <div class="truck">
+                  <i class="fas fa-truck"></i>
+               </div>
+               <div class="valores">
+                  <p class="precios">$70.500</p>
+                  <p class="descuentos">10% off</p>
+               </div>
+               <p class="descripciones">Samsung Galaxy S10</p>
+            </div>
+            <div class="articulo">
+               <img src="../images/img-tv-samsung-smart.jpg" width="360" alt="tv samsung">
+               <div class="truck">
+                  <i class="fas fa-truck"></i>
+               </div>
+               <div class="valores">
+                  <p class="precios">$23.200</p>
+                  <p class="descuentos">5% off</p>
+               </div>
+               <p class="descripciones">SmartTv Samsung 43"</p>
+            </div>
+      </article>
+   </main>
    <footer>
       <div class="footer-content">
          <div class="footer-art">
             <div class="footer-icon">
                <i class="fas fa-credit-card"></i>
             </div>
-            <p class="footer-text">Pagá con tarjeta o en efectivo</p>
+            <p>Pagá con tarjeta o en efectivo</p>
          </div>
 
          <div class="footer-art">
