--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -2,28 +2,68 @@
 body {
     font-family: Roboto;
     font-size: 12px;
-    background-color: rgb(245, 245, 245)
+    background-color: #ebebeb;
 }
 
+ul {
+    list-style-type: none;
+}
+
+header {
+    background-color: #EAC926;
+}
+
+.titulares {
+    font-size: 24px;
+}
+
+.precios {
+    font-size: 18px;
+}
+
+.descuentos {
+    font-size: 16px;
+}
+
+.descripciones {
+    font-size: 16px;
+}
+
+.burger-menu{
+    color: #1259c3;
+    font-size: 20px;
+    text-align: center;
+    padding-bottom: 20px;
+}
+
+.fa-bars:before {
+    content: "\f0c9";
+    background: #1259c3;
+    color: white;
+    padding: 15px;
+    border-radius: 10px;
+}
+
+.fa-truck:before {
+    color: #39b54a;
+    border-radius: 50%;
+    border-style: solid;
+}
 
 footer {
     background-color: #ebebeb;
 }
 
-
 .footer-icon {
     text-align: center;
-    font-size: 30px;
-    color: midnightblue;
+    font-size: 2em;
+    color: #03264C;
+    margin-bottom: 10px;
 }
 
 .footer-content{
     display:flex;
     justify-content: space-around;
-    padding-top: 20px; /* probando con padding */
+    padding-top: 20px;
 }
-
-.footer-art{
-}
-
 
