agregando estilo al main

--- a/views/testHtml.html
+++ b/views/testHtml.html
@@ -44,46 +44,54 @@
          <h3 class="titulares">Basado en tu última visita</h3>
          <div id="ultimavisita">
             <div class="articulo">
-               <img src="../images/img-cafetera-moulinex.jpg" width="360" alt="cafetera moulinex">
-               <div class="truck">
-                  <i class="fas fa-truck"></i>
+               <img class="img-art" src="../images/img-cafetera-moulinex.jpg" width="360" alt="cafetera moulinex">
+               <div class="articulo-text">
+                  <div class="truck">
+                     <i class="fas fa-truck"></i>
+                  </div>
+                  <div class="valores">
+                     <p class="precios">$6.770</p>
+                     <p class="descuentos">40% off</p>
+                  </div>
+                  <p class="descripciones">Cafetera Moulinex</p>
                </div>
-               <div class="valores">
-                  <p class="precios">$6.770</p>
-                  <p class="descuentos">40% off</p>
-               </div>
-               <p class="descripciones">Cafetera Moulinex</p>
-            </div>   
+            </div>
             <div class="articulo">
                <img src="../images/img-macbook-pro-2019.jpg" width="360" alt="macbook pro 2019">
-               <div class="truck">
-                  <i class="fas fa-truck"></i>
+               <div class="articulo-text">
+                  <div class="truck">
+                     <i class="fas fa-truck"></i>
+                  </div>
+                  <p class="precios">$230.000</p>
+                  <p class="descuentos">20% off</p>
+                  <p class="descripciones">MacBook Pro 2019</p>
                </div>
-               <p class="precios">$230.000</p>
-               <p class="descuentos">20% off</p>
-               <p class="descripciones">MacBook Pro 2019</p>
             </div>   
             <div class="articulo">
                <img src="../images/img-samsung-galaxy-s10.jpg" width="360" alt="samsung galaxy s10">
-               <div class="truck">
-                  <i class="fas fa-truck"></i>
+               <div class="articulo-text">
+                  <div class="truck">
+                     <i class="fas fa-truck"></i>
+                  </div>
+                  <div class="valores">
+                     <p class="precios">$70.500</p>
+                     <p class="descuentos">10% off</p>
+                  </div>
+                  <p class="descripciones">Samsung Galaxy S10</p>
                </div>
-               <div class="valores">
-                  <p class="precios">$70.500</p>
-                  <p class="descuentos">10% off</p>
-               </div>
-               <p class="descripciones">Samsung Galaxy S10</p>
             </div>
             <div class="articulo">
                <img src="../images/img-tv-samsung-smart.jpg" width="360" alt="tv samsung">
-               <div class="truck">
-                  <i class="fas fa-truck"></i>
+               <div class="articulo-text">
+                  <div class="truck">
+                     <i class="fas fa-truck"></i>
+                  </div>
+                  <div class="valores">
+                     <p class="precios">$23.200</p>
+                     <p class="descuentos">5% off</p>
+                  </div>
+                  <p class="descripciones">SmartTv Samsung 43"</p>
                </div>
-               <div class="valores">
-                  <p class="precios">$23.200</p>
-                  <p class="descuentos">5% off</p>
-               </div>
-               <p class="descripciones">SmartTv Samsung 43"</p>
             </div>            
          </div>
       </article>
@@ -93,47 +101,55 @@
          <div id="ofertas">
             <div class="articulo">
                <img src="../images/img-cafetera-moulinex.jpg" width="360" alt="cafetera moulinex">
-               <div class="truck">
-                  <i class="fas fa-truck"></i>
+               <div class="articulo-text">
+                  <div class="truck">
+                     <i class="fas fa-truck"></i>
+                  </div>
+                  <div class="valores">
+                     <p class="precios">$6.770</p>
+                     <p class="descuentos">40% off</p>
+                  </div>
+                  <p class="descripciones">Cafetera Moulinex</p>
                </div>
-               <div class="valores">
-                  <p class="precios">$6.770</p>
-                  <p class="descuentos">40% off</p>
-               </div>
-               <p class="descripciones">Cafetera Moulinex</p>
             </div>
             <div class="articulo">
                <img src="../images/img-macbook-pro-2019.jpg" width="360" alt="macbook pro 2019">
-               <div class="truck">
-                  <i class="fas fa-truck"></i>
+               <div class="articulo-text">
+                  <div class="truck">
+                     <i class="fas fa-truck"></i>
+                  </div>
+                  <div class="valores">
+                     <p class="precios">$230.000</p>
+                     <p class="descuentos">20% off</p>
+                  </div>
+                  <p class="descripciones">MacBook Pro 2019</p>
                </div>
-               <div class="valores">
-                  <p class="precios">$230.000</p>
-                  <p class="descuentos">20% off</p>
-               </div>
-               <p class="descripciones">MacBook Pro 2019</p>
             </div>
             <div class="articulo">
                <img src="../images/img-samsung-galaxy-s10.jpg" width="360" alt="samsung galaxy s10">
-               <div class="truck">
-                  <i class="fas fa-truck"></i>
+               <div class="articulo-text">
+                  <div class="truck">
+                     <i class="fas fa-truck"></i>
+                  </div>
+                  <div class="valores">
+                     <p class="precios">$70.500</p>
+                     <p class="descuentos">10% off</p>
+                  </div>
                </div>
-               <div class="valores">
-                  <p class="precios">$70.500</p>
-                  <p class="descuentos">10% off</p>
-               </div>
-               <p class="descripciones">Samsung Galaxy S10</p>
+                  <p class="descripciones">Samsung Galaxy S10</p>
             </div>
             <div class="articulo">
                <img src="../images/img-tv-samsung-smart.jpg" width="360" alt="tv samsung">
-               <div class="truck">
-                  <i class="fas fa-truck"></i>
+               <div class="articulo-text">
+                  <div class="truck">
+                     <i class="fas fa-truck"></i>
+                  </div>
+                  <div class="valores">
+                     <p class="precios">$23.200</p>
+                     <p class="descuentos">5% off</p>
+                  </div>
+                  <p class="descripciones">SmartTv Samsung 43"</p>
                </div>
-               <div class="valores">
-                  <p class="precios">$23.200</p>
-                  <p class="descuentos">5% off</p>
-               </div>
-               <p class="descripciones">SmartTv Samsung 43"</p>
             </div>
       </article>
    </main>
