--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -1,4 +1,14 @@
 
+/* 
+Paleta de colores
+Amarillo: #EAC926;
+Azul: #03264C;
+Celeste: #1259c3;
+Gris oscuro: #666;
+Gris claro: #ebebeb;
+Verde: #39b54a;
+ */
+
 body {
     font-family: Roboto;
     font-size: 12px;
@@ -12,6 +22,12 @@ ul {
 header {
     background-color: #EAC926;
 }
+
+main {
+    text-align: center;
+    width: 90%;
+}
+
 
 .titulares {
     font-size: 24px;
@@ -44,11 +60,23 @@ header {
     border-radius: 10px;
 }
 
+.articulo {
+    margin-bottom: 10px;
+    /* width: 360px; */
+    
+}
+
 .fa-truck:before {
     color: #39b54a;
     border-radius: 50%;
     border-style: solid;
+    padding: 5px;
 }
+
+.articulo-text {
+    border-top: 1px solid #ebebeb ;
+}
+
 
 footer {
     background-color: #ebebeb;
